<resources>
    <string name="app_name">Crashdroid</string>
    <string name="select_services">Select services:</string>
    <string name="hockey_app">HockeyApp</string>
    <string name="new_relic">NewRelic</string>
    <string name="crittercism">Crittercism</string>
    <string name="app_see">AppSee</string>
    <string name="apply">Apply &amp; exit</string>
    <string name="apply_changes">Some services can\'t be disabled from the runtime. The changes will be applied only by restarting the application.</string>
    <string name="crashlytics">Crashlytics</string>
    <string name="google_analytics">Google Analytics</string>
    <string name="throw_out_of_memory">"Out Of Memory"</string>
    <string name="throw_bad_token_exception">"Bad Token Exception"</string>
    <string name="throw_stack_overflow_exception">"Stack Overflow Exception"</string>
    <string name="throw_pointer_index_out_of_range">"Pointer Index Out Of Range"</string>
    <string name="throw_illegal_state_exception">"Illegal State Exception"</string>
    <string name="throw_null_pointer_exception">"Null Pointer Exception"</string>
    <string name="trigger_crash">Trigger crash:</string>
</resources>
